# seqeyes_plugin

./: .eslintrc.cjs  .gitattributes  .gitignore  .vscodeignore  LICENSE.txt  PLAN.md  PULL_REQUEST_TEMPLATE.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  tsconfig.json  vitest.performance.config.ts
.github/workflows/: browser-tests.yml  deploy-pages.yml  performance-guards.yml  publish.yml  python-tests.yml  vscode-extension-tests.yml
licenses/: license_safe_pns
matlab/: DEPLOY.md  gettingStarted.m  openbseq.m  openseq.m  pack_toolbox.m  seqeyes.m  toolboxInfo.xml
matlab/examples/: demo.m
python/: README.md  pyproject.toml
python/examples/: demo.ipynb  demo.py
python/src/seqeyes/: __init__.py  _plot.py  _renderer.py
python/src/seqeyes/resources/: pulseq-bundle.js  viewer.html  webview-bundle.js
python/tests/: conftest.py  debug_full.html  debug_minimal.html  debug_viewer.html  debug_viewer.py  integration_test.py  test_plot.py  test_renderer.py
scripts/: build-extension.mjs  build-webview.mjs  release-mltbx.cmd
src/: extension.ts
src/cli/: exportKspace.ts
src/editor/: seqEditorProvider.ts  webviewContent.ts
src/pulseq/: binaryReader.ts  boundedSeries.ts  computeBudget.ts  decoder.ts  decompressor.ts  derivedWindow.ts  displayDownsampling.ts  gradientSampler.ts  kspace.ts  kspaceExport.ts  kspaceExportArtifacts.ts  m1.ts  pns.ts  reader.ts  readerShared.ts  trdetect.ts  (+3 more)
web/: derived-series.js  index.html  pulseq-browser.ts  pulseq-bundle.js  styles.css  webview-bundle.js
(+49 files in other folders)
