[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seqeyes-python"
version = "0.2.6"
description = "Interactive Pulseq MRI sequence viewer for Jupyter — lightweight, beautiful, replaces seq.plot() in pypulseq."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SeqEyes Developers"},
]
keywords = ["pulseq", "mri", "sequence", "visualization", "k-space", "gradient", "seqeyes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
pypulseq = ["pypulseq>=1.4"]
desktop = ["pywebview>=5"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bughht/seqeyes_plugin"
Repository = "https://github.com/bughht/seqeyes_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/seqeyes"]
artifacts = ["src/seqeyes/resources/*"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/seqeyes/resources/*"]
